--- a/网鼎杯 2018.md
+++ b/网鼎杯 2018.md
@@ -1,18 +1,18 @@
-# 2021/07/14
+# 网鼎杯 2018
 
 ## Fakebook
 
-> 网鼎杯 2018
+> *2021/07/14*
 
 ### 题目
 
 题目进去之后是一个界面
 
-![202107141](img/20210714/202107141.png)
+![网鼎杯20181](img/网鼎杯2018/网鼎杯20181.png)
 
 login是登录，join是注册，先扫一波后台，发现`robots.txt`
 
-![202107142](img/20210714/202107142.png)
+![网鼎杯20182](img/网鼎杯2018/网鼎杯20182.png)
 
 有备份文件，下载下来
 
@@ -65,19 +65,19 @@ class UserInfo
 
 很明显和反序列化有关，但是暂时没发现利用点，先注册一个账号，登陆一下
 
-![202107143](img/20210714/202107143.png)
+![网鼎杯20183](img/网鼎杯2018/网鼎杯20183.png)
 
 点击`1`，发现显示出来百度的页面信息
 
-![202107144](img/20210714/202107144.png)
+![网鼎杯20184](img/网鼎杯2018/网鼎杯20184.png)
 
 结合上面的代码，可以想到是`SSRF`的问题，因为源代码中限制了协议类型，无法绕过，需要借助**反序列化**，将payload插入，读出`flag`，但是目前还是没有利用点，试一下展示页面的`no`参数，发现存在**SQL注入**，首先采用联合查询，`no=-1/**/union/**/select/**/1,2,3,4`，查看页面信息
 
-![202107145](img/20210714/202107145.png)
+![网鼎杯20185](img/网鼎杯2018/网鼎杯20185.png)
 
 发现路径为`/var/www/html`，继续采用**报错注入**，可以爆出数据库，表，列名，可以发现其中`data`字段就是存储反序列化数据的字段
 
-![202107146](img/20210714/202107146.png)
+![网鼎杯20186](img/网鼎杯2018/网鼎杯20186.png)
 
 然后采用联合查询的方法，将序列化数据导入即可
 
